# 4ChDo2

./: package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api_utils.rs  file_utils.rs  main.rs
src/components/: Greet.vue  Main.vue  ThumbnailComponent.vue
src/interfaces/: Boards.ts  Catalog.ts  ThreadPost.ts
src/styling/: styles.css  styles.scss
